Closed
Bug 723929
Opened 14 years ago
Closed 14 years ago
Avoid access to uninitialized mLastPaintEndTime
Categories
(Core :: Widget, defect)
Tracking
()
RESOLVED
FIXED
mozilla13
People
(Reporter: jacek, Assigned: jacek)
Details
Attachments
(1 file)
|
908 bytes,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
I often hit an assertion that mLastPaintEndTime is uninitialized in DispatchPendingEvents on Wine. While there may be a bug in Wine that causes different message sequence that is not observed on Windows, I don't see a reason to believe that it will be set in OnPaint before an attempt to access it, so AFAICT it may happen on Windows as well. The attached patch initializes mLastPaintEndTime in nsWindow constructor.
Attachment #594175 -
Flags: review?(roc)
Attachment #594175 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 1•14 years ago
|
||
Thanks for the review.
https://hg.mozilla.org/integration/mozilla-inbound/rev/3821d8e96981
Comment 2•14 years ago
|
||
Assignee: nobody → jacek
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla13
You need to log in
before you can comment on or make changes to this bug.
Description
•