Bug 723929 - Avoid access to uninitialized mLastPaintEndTime r=roc